--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
+    "python.linting.enabled": true,
+    "python.languageServer": "Pylance",
+    "python.analysis.typeCheckingMode": "basic",
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportMissingModuleSource": "none"
+    },
+    "micropico.syncFolder": "",
+    "micropico.openOnStart": true,
+    "python.analysis.typeshedPaths": [
+        "~\\.micropico-stubs\\included"
+    ],
+    "python.analysis.extraPaths": [
+        "~\\.micropico-stubs\\included"
+    ],
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#391dd6",
         "activityBar.background": "#391dd6",
