--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
         "**/.mypy_cache",
         "**/client",
         "**/.mypy_cache/3.10", 
-        "**/README.md"
+        "**/README.md", 
+        "**/data"
     ]
 }
